summative.moria.Moria.scala.error
Compilation error:
Moria:6: error: '(' expected but identifier found.
} while !isFacingWall() 
        ^