summative.moria.Moria.scala.code
do{
  while (!isOverBaggle()){
    forward()
  }
  
} while !isFacingWall()